[package]
name = "dbackend"
description = "The DirtyBot backend crate"
publish = false
version = "0.1.0"
edition = "2018"

[dependencies]
web3 = "0.17.0"
envconfig = "0.10"
envconfig_derive = "0.10"
dotenv = "0.15"
tokio = { version = "1.13" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
fern = "0.6"
chrono = "0.4"
secp256k1 = {version = "0.20", features = ["rand-std"] }
tiny-hderive = "0.3"
bip39 = "1.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
r2d2_postgres = "0.18"